k8s/clickhouse/clickhouse-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-clickhouse
spec:
  stripPrefix:
    prefixes:
      - /clickhouse
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clickhouse
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-clickhouse@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /clickhouse
            pathType: Prefix
            backend:
              service:
                name: clickhouse
                port:
                  number: 8123
